// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bubble renders correctly 1`] = `
<div
  class="root transparent"
>
  <div
    class="bubble"
    data-bubble-container="true"
  />
  <span
    class="arrow"
    data-bubble-arrow="true"
  />
</div>
`;

exports[`Bubble renders isFloating={true} 1`] = `
<div
  class="root transparent isFloating"
>
  <div
    class="bubble"
    data-bubble-container="true"
  />
  <span
    class="arrow"
    data-bubble-arrow="true"
  />
</div>
`;

exports[`Bubble renders isHidden={true} 1`] = `
<div
  class="root transparent isHidden"
>
  <div
    class="bubble"
    data-bubble-container="true"
  />
  <span
    class="arrow"
    data-bubble-arrow="true"
  />
</div>
`;

exports[`Bubble renders isOpeningUpward={true} 1`] = `
<div
  class="root openUpward transparent"
>
  <div
    class="bubble"
    data-bubble-container="true"
  />
  <span
    class="arrow"
    data-bubble-arrow="true"
  />
</div>
`;

exports[`Bubble renders isTransparent={false} 1`] = `
<div
  class="root"
>
  <div
    class="bubble"
    data-bubble-container="true"
  />
  <span
    class="arrow"
    data-bubble-arrow="true"
  />
</div>
`;
